# rota-queue

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
rota_queue/: rota_queue.py
tests/: test__rota.py
