[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "rota_queue"
version = "0.0.0"
description = "A simple application to manage a rota that queues people."
authors = ["Bilbottom"]
readme = "README.md"
packages = [{include = "rota_queue"}]

[tool.poetry.scripts]
rota-queue = "rota_queue.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
peewee = "^3.16.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
coverage-badge = "^1.1.0"
pre-commit = "^2.21.0"
pylint = "2.13.9"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"


[tool.pytest.ini_options]
addopts = "--cov=rota_queue"
testpaths = [
    "tests",
]


[tool.isort]
profile = "black"


[tool.pylint.format]
max-line-length = 120

[tool.pylint.MASTER]
ignore-paths = "^tests/.*$"
